<resources>
    <string name="app_name">QuickMaths</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="change_avatar">CHANGE AVATAR</string>
    <string name="connect_to_facebook">CONNECT TO FACEBOOK</string>
    <string name="sound">SOUND</string>
    <string name="music">MUSIC</string>
    <string name="ok">CHANGE</string>
    <string name="test">test</string>
    <string name="user_name_busy">Username busy</string>
    <string name="players_current_name">Players current name</string>
    <string name="write_question">Write question</string>
    <string name="first_answer">1st answer</string>
    <string name="second_answer">2nd answer</string>
    <string name="third_answer">3rd answer</string>
    <string name="fourth_answer">4th answer</string>
    <string name="submit">SUBMIT</string>
    <string name="about">About</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multiplayer</string>
    <string name="friends">Friends</string>
    <string name="add_question">Add Question</string>
    <string name="credits">Credits:</string>
    <string name="click_to_continue">Click to continue..</string>
    <string name="settings">Settings</string>
    <string name="mute_sound">Mute Sound</string>
    <string name="account">Account</string>
    <string name="background">Background</string>
    <string name="choose_categories">Choose categories:</string>
    <string name="how_many_players">How many players</string>
    <string name="start_new_offline_game">Start new offline game</string>
    <string name="c_humor">HUMOR</string>
    <string name="c_sport">SPORT</string>
    <string name="c_film">FILM</string>
    <string name="c_music">MUSIC</string>
    <string name="c_random">RANDOM</string>
    <string name="c_esport">E-SPORT</string>
    <string name="c_science">SCIENCE</string>
    <string name="done">Done</string>
    <string name="face">Face</string>
    <string name="eye">Eye</string>
    <string name="mouth">Mouth</string>
    <string name="nose">Nose</string>
    <string name="hair">Hair</string>
    <string name="preview">Preview</string>
    <string name="back">Back</string>
    <string name="random">Random</string>
    <string name="save">Save</string>
    <string name="text_view_single_player">Single player</string>
    <string name="text_view_player_name">Player name</string>
    <string name="button_select_all">Select all</string>
    <string name="button_select_none">Select none</string>
    <string name="button_go_back">Go back</string>
    <string name="button_proceed">Proceed</string>
    <string name="player1">P1</string>
    <string name="player2">P2</string>
    <string name="player3">P3</string>
    <string name="player4">P4</string>
    <string name="player1_whole">Player 1</string>
    <string name="player2_whole">Player 2</string>
    <string name="player3_whole">Player 3</string>
    <string name="player4_whole">Player 4</string>

    <string name="number_of_players">Number of players</string>
    <string name="move_forward">Move forward</string>
    <string name="move_backwards">Move backwards</string>
    
    <string name="player_1_avatar">Player 1 avatar</string>
    <string name="player_2_avatar">Player 2 avatar</string>
    <string name="player_3_avatar">Player 3 avatar</string>
    <string name="player_4_avatar">Player 4 avatar</string>
    <string name="name">Name</string>
    <string name="title_activity_show_online">ShowOnlineActivity</string>
    <string name="login">Login</string>
    <string name="find_game">Find game</string>
    <string name="create_lobby">Create lobby</string>
    <string name="Information">Information</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="logout">Log out</string>
    <string name="chat">Chat</string>
    <string name="worldchat">World Chat</string>
    <string name="how_to_play">How to play</string>
    <string name="join">Join</string>
    <string name="iths">Iths</string>


    />
</resources>
