<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.iths.apostolidis.quickmaths.SinglePlayerActivity">

    <CheckBox
        android:id="@+id/checkboxHistory"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_history"
        app:layout_constraintEnd_toStartOf="@+id/checkboxGeography"
        app:layout_constraintStart_toEndOf="@+id/checkboxMusic"
        app:layout_constraintTop_toBottomOf="@+id/checkboxSport" />

    <CheckBox
        android:id="@+id/checkboxGeography"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_geography"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxFilm" />

    <CheckBox
        android:id="@+id/checkboxEsport"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_esport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxMusic" />

    <TextView
        android:id="@+id/textViewPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_player_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSinglePlayer"
        app:layout_constraintVertical_bias="0.684" />

    <EditText
        android:id="@+id/editTextPlayerName"
        android:layout_width="156dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkboxSport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkboxRandom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_random"
        app:layout_constraintEnd_toStartOf="@+id/checkboxMath"
        app:layout_constraintStart_toEndOf="@+id/checkboxEsport"
        app:layout_constraintTop_toBottomOf="@+id/checkboxHistory" />

    <CheckBox
        android:id="@+id/checkboxSport"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:text="@string/c_sport"
        app:layout_constraintEnd_toStartOf="@+id/checkboxFilm"
        app:layout_constraintStart_toEndOf="@+id/checkboxHumor"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkboxFilm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="192dp"
        android:text="@string/c_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkboxHumor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="192dp"
        android:text="@string/c_humor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkboxMath"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_math"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxGeography" />

    <CheckBox
        android:id="@+id/checkboxMusic"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxHumor" />

    <Button
        android:id="@+id/buttonProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickProceed"
        android:text="@string/button_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectNone"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickGoBack"
        android:text="@string/button_go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonProceed"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectAll"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickSelectAll"
        android:text="@string/button_select_all"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelectNone"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxEsport" />

    <Button
        android:id="@+id/buttonSelectNone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickSelectNone"
        android:text="@string/button_select_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxMath" />

    <TextView
        android:id="@+id/textViewSinglePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_view_single_player"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
