<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.iths.apostolidis.quickmaths.SettingsActivity"
    android:background="@drawable/backgroundtrees">

    <Button
        android:id="@+id/buttonChangeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:elevation="5dp"
        android:fontFamily="@font/indie_flower"
        android:background="@drawable/rounded_edges_button"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickChangeName"
        android:text="@string/change_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChangeAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        android:fontFamily="@font/indie_flower"
        android:background="@drawable/rounded_edges_button"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickChangeAvatar"
        android:text="@string/change_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeName" />

    <EditText
        android:id="@+id/editTextChangeName"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/text_view_background"
        android:elevation="20dp"
        android:fontFamily="@font/indie_flower"
        android:hint="@string/players_current_name"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangeNameOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonChangeNameOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="148dp"
        android:elevation="20dp"
        android:fontFamily="@font/indie_flower"
        android:onClick="onClickChangeNameOk"
        android:text="@string/ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewNameNotAvaliable"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTest"
        android:layout_width="128dp"
        android:layout_height="104dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/test"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNameNotAvaliable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="24dp"
        android:text="@string/user_name_busy"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/move_backwards"
        android:elevation="5dp"
        android:onClick="onClickBack"
        android:padding="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />


</android.support.constraint.ConstraintLayout>
