<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.iths.apostolidis.quickmaths.MultiplayerActivity"
    android:background="@drawable/backgroundlogin">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/move_backwards"
        android:elevation="5dp"
        android:padding="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <Button
        android:id="@+id/ButtonCreateLobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edges_button"
        android:fontFamily="@font/indie_flower"
        android:onClick="startLobby"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLobby"
        tools:text="wip" />

    <Button
        android:id="@+id/ButtonFindLobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_background"
        android:fontFamily="@font/indie_flower"
        android:onClick="onClickFindLobby"
        android:text="@string/find_game"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonCreateLobby" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/player1" />

    <TextView
        android:id="@+id/textViewYourStats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="TextView"
        android:textColor="@color/fui_errorColor"
        android:textSize="30sp"
        android:background="@color/greyTint"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/text_view_background"
        android:fontFamily="@font/indie_flower"
        android:text="@string/create_lobby"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="No function/ LOBBY" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_background"
        android:fontFamily="@font/indie_flower"
        android:text="@string/Information"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonFindLobby"
        tools:text="No fnctin/ INFO" />

    <Button
        android:id="@+id/buttonAddQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_background"
        android:fontFamily="@font/indie_flower"
        android:text="@string/add_question"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInfo"
        tools:text="No Fucntion/ add The Q" />

</android.support.constraint.ConstraintLayout>
